--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon backend/server.js",
-    "build": "npm install &&npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "nodemon backend/server.js"
-  },
+  "dev": "nodemon backend/server.js",
+  "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+  "start": "node backend/server.js"
+},
   "dependencies": {
     "bcryptjs": "^3.0.1",
     "cloudinary": "^2.8.0",
